Change heading Name as Sachin

--- a/ChatUI/index.html
+++ b/ChatUI/index.html
@@ -20,7 +20,7 @@
         <div class="chats-container align-right b-left-radius blue-background">
             <div class="text-chat-container ">
                 <p class="chatting-obtion">
-                    Hello Rahul, how are you ?
+                    Hello Sachin, how are you?
                 </p>
             </div>
         </div>
