--- a/Conference Page/index.html
+++ b/Conference Page/index.html
@@ -17,7 +17,7 @@
         <p class="Conference-main-page-decription"> Redefining the future of Iot with LoRaWAN </p>
         <button class="btn btn-primary" onclick="display('sectiondetailedpage')"> Know more </button>
     </div>
-    <div id="sectiondetailedpage" class="detailed-view-container">
+    <div id="sectiondetailedpage" class="detailed-view-container container-not-display">
         <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vKJ6nXE_6Hc?rel=0" allowfullscreen></iframe>
         </div>
@@ -47,7 +47,7 @@
         </div>
         <button class="btn btn-primary" onclick="display('sectionhomepage')"> Back </button>
     </div>
-    <script type="text/javascript" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/js/ccbp-ui-kit.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
